# Launcher

./: .gitignore  ApiFileRequest  Cargo.toml  README.md
.github/workflows/: release.yml
src/: const.rs  const_file.rs  download_release.rs  main.rs  people.rs
src/people/: people.rs
wasm/: index.html
